ci: docker custom openjdk image with specific modules